# rule-of-three

./: .gitignore  README.md  install_project_dependencies.ps1
server/: .flake8  .funcignore  alembic.ini  alter_configs.py  debug_server.ps1  host.json  local.settings.json  migrate.ps1  populate_configs.py  pyproject.toml  run_server.ps1  secret_config.yaml  setup_my_project.ps1
server/api/: __init__.py  _app.py  app.py  cache.py  function.json
server/api/application/: string_encoding.py  tasks_list_service.py  validation_exception.py
server/api/domain/: task.py  tasks_list.py
server/api/handlers/: auth_zero_decorators.py  exception_handlers.py  keep_alive_handlers.py  requests.py  responses.py  tasks_list_handlers.py
server/api/persistence/: constants.py  converters.py  initialise_cosmos.py  migrate_cosmos.py  run_cosmos.py
server/src/: __init__.py  _app.py  app.py  config.yaml  function.json  main.py
server/src/application/: not_found_exception.py  notes_list_service.py  tasks_list_service.py
server/src/domain/: note.py  notes_list.py  task.py  tasks_list.py
server/src/handlers/: auth0_integration.py  auth_zero_decorators.py  converters.py  exception_handlers.py  notes_list_handler.py  notes_list_handlers.py  requests.py  responses.py  tasks_list_handlers.py
server/src/migrations/: env.py
server/src/persistence/: constants.py  converters.py  initialise_cosmos.py
server/tests/: auth0_tokens.py  auth_zero_tokens.py  config.yaml  database.py  datetime.py  run_windows_cosmos.py  specification.py  validations.py
server/timer/: __init__.py  config.yaml  function.json  timer.py
(+217 files in other folders)
