[tool.poetry]
name = "rule_of_three"
package-mode = false
version = "0.1.0"
description = "The rule of three application"
authors = ["Sean Jennings"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^3.0.3"
flask-cors = "^4.0.1"
alembic = "^1.13.2"
pyodbc = "^5.1.0"
sqlalchemy-utils = "^0.41.2"
pydapper = "^0.10.0"

[tool.poetry.dev-dependencies]
colorama = "^0.4.6"
iniconfig = "^2.0.0"
packaging = "^23.2"
pluggy = "^1.4.0"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
flake8 = "^7.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
  "tests"
]
pythonpath = [
  ".", "src",
]
